# metabayn-update

./: .gitattributes  .gitignore  CHANGELOG.md  build_installer.ps1  build_script.cjs  build_windows_local.ps1  cloudflare_worker_script.js  correct.key.pub  correct_decoded.key.pub  final.key  final.key.pub  final_fix.ps1  final_key  final_key.pub  final_key_plain  final_key_raw  fix_build.ps1  fix_final_strategy.ps1  fix_git_agresif.ps1  fix_git_final.ps1  fix_git_rename.ps1  fix_pubkey.ps1  fix_push_final.ps1  fix_robust.ps1  fix_secrets_and_push.ps1  fixed.key.pub  index.html  metabayn_app_prompt.txt  mysigning.key.pub  package-lock.json  package.json  package.json.sig  setup_git.ps1  test_key  test_key.pub  trigger_retry.ps1  tsconfig.json  verify_models.cjs  vite.config.ts  vitest.config.ts  (+1 more)
.github/workflows/: release.yml
.jules/: bolt.md
CadangHapusan/coverage/: clover.xml  coverage-final.json  gatewayBalance.ts.html  (+2 more)
metabayn-backend/: README_FEATURES.md  package-lock.json  package.json  repair_db.sql  schema.sql  tsconfig.json  update_profit.sql  wrangler.toml
scripts/: gen-key-final.mjs  restore-keys.mjs
src/: App.js  App.tsx  main.js  main.tsx
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/scripts/: ai_cluster.py
src-tauri/src/: ai_cluster.rs  anti_clone.rs  api.rs  audit.rs  auth.rs  cloudflare.rs  cloudflare_commands.rs  crypto_utils.rs  csv.rs  duplicates.rs  filesystem.rs  keyword_db.rs  main.rs  metadata.rs  security.rs  settings.rs  subscription.rs  token.rs  video.rs
update/: version.json
updates/: version.json
(+153 files in other folders)
