[package]
name = "metabayn-studio"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "process-exit", "process-relaunch", "window-all", "system-tray", "shell-execute", "shell-sidecar", "dialog-open", "dialog", "fs-all", "path-all", "shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2"
csv = "1.2"
base64 = "0.21"
kamadak-exif = "0.5"
chrono = "0.4"
machine-uid = "0.3"
sha2 = "0.10"
thiserror = "1"
glob = "0.3"
which = "6"
tempfile = "3"
dirs = "5"
image = "0.24"
aes = "0.8.4"
block-modes = "0.9.1"
hex = "0.4.3"
rand = "0.9.2"
cbc = "0.1.2"
governor = "0.10.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"


[features]
custom-protocol = ["tauri/custom-protocol"]
